--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
 						<div class="progress-wrap">
 							<h3>Web Programming</h3>
 							<div class="progress">
-							  <div class="progress-bar color3" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+							  <!--<div class="progress-bar color3" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
 							   <span class="bar-width">50%</span>
-							  </div>
+							  </div>-->
 							</div>
 						</div>
 						<div class="progress-wrap">
 							<h3>Mobile Programming</h3>
-							<div class="progress">
+							<!--<div class="progress">
 							  <div class="progress-bar color4" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
 							   <span class="bar-width">60%</span>
-							  </div>
+							  </div>-->
 							</div>
 						</div>
 					</div>
