--- a/index.html
+++ b/index.html
@@ -105,15 +105,21 @@
 							</div>
 						</div>
 						<div class="progress-wrap">
-							<h3>Mobile Programming</h3>
-							<!--<div class="progress">
+							<h3>Web Design</h3>
+							<div class="progress">
 							  <div class="progress-bar color4" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
 							   <span class="bar-width">60%</span>
-							  </div>-->
+							  </div>
 							</div>
-						</div>
-					</div>
-				</div>			
+						</div>									  
+				</div>					
+				</div>
+				<div class="col-md-2" data-wow-delay="0.3s"">
+				</div>					
+
+				<div class="col-md-4" data-wow-delay="0.3s"">
+					<img src="33.jpg" alt="" class="img-responsive thumbnail">
+				</div>					
 			</div>	
 		</div>
 	</section>	
@@ -257,6 +263,7 @@
 		<div class="container">
 		  <div class="row">
 		      <div class="col-md-8 col-md-offset-2">
+			  <h4>Send Me message</h4>
 		        <div id="sendmessage">Your message has been sent. Thank you!</div>
                 <div id="errormessage"></div>
                 <form action="" method="post" role="form" class="contactForm">
